<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2pt">

                <TextView
                    android:id="@+id/vehicle_details_plate_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="100dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_plate_TextView"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehicle_details_plate_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_weight="1"
                    android:width="150dp"
                    android:textSize="20dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2pt">

                <TextView
                    android:id="@+id/vehicle_details_brand_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="100dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_brand_TextView"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehicle_details_brand_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2pt">

                <TextView
                    android:id="@+id/vehicle_details_model_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="100dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_model_TextView"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehicle_details_model_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2pt">

                <TextView
                    android:id="@+id/vehicle_details_color_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="100dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_color_TextView"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehicle_details_color_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2pt">

                <TextView
                    android:id="@+id/vehicle_details_dailyCost_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="130dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_dailyCost_TextView"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehicle_details_dailyCost_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_weight="1"
                    android:textSize="24dp"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/vehicle_details_currency_TextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:width="50dp"
                    android:gravity="start|center_vertical"
                    android:text="€"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2pt">

                <TextView
                    android:id="@+id/vehicle_details_km_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:width="130dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_km_TextView"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/vehicle_details_km_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5pt"
                    android:layout_marginRight="5pt"
                    android:layout_weight="1"
                    android:layout_gravity=""
                    android:textSize="24dp"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/vehicle_details_km_TextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:width="50dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/vehicle_details_km_TextView2"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addVehicle"
                    android:text="Ajouter Véhicule" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="toList"
                    android:text="Annuler" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>